--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
             </li>
         </ol>
     </div>
-    
+    <a href="#">FirstDoc Application for Testing only</a>
     <script type="text/javascript" src="scripts/detect.js"></script>
 </body>
 </html>
