--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
             </li>
         </ol>
     </div>
-    <a href="#">FirstDoc Application for Testing only</a>
+    <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileTesting.plist">FirstDoc Application for Testing only</a>
     <script type="text/javascript" src="scripts/detect.js"></script>
 </body>
 </html>
