--- a/views/index.html
+++ b/views/index.html
@@ -41,9 +41,9 @@
                 If you get the error that the install is blocked then go to Settings &#8594; Security &#8594; Unknown sources &#8594; Check Unknown Sources and tap on the installation again to install the app.
             </li>
         </ol>
-    </div>FirstDocMobileSprint1.plist
+    </div>
     <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileTesting.plist">FirstDoc Application for Testing only</a>
-    
+	</br>
     <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileSprint1.plist">FirstDoc Application for Testing only (sprint1)</a>
     <script type="text/javascript" src="scripts/detect.js"></script>
 </body>
