--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
         </h3>
 
         <h4>Please click the link below to download the app from csc</h4>
-        <a href="#" id="firstDocDownload">FirstDoc Application</a>
+        <a href="#" id="firstDocDownload">FirstDoc Mobile 0.9 Application released by 31-Aug</a>
     </div>    
     
     <div>
@@ -42,9 +42,9 @@
             </li>
         </ol>
     </div>
-    <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileTesting.plist">FirstDoc Application for Testing only</a>
+    <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileTesting.plist">FirstDoc Mobile 0.9 Application for internal testing only</a>
 	</br>
-    <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileSprint1.plist">FirstDoc Application for Testing only (sprint1)</a>
+    <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileSprint1.plist">FirstDoc Mobile 1.0 Application for Sprint1 by 4 Nov 2016</a>
     <script type="text/javascript" src="scripts/detect.js"></script>
 </body>
 </html>
