--- a/views/index.html
+++ b/views/index.html
@@ -47,6 +47,8 @@
     <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileSprint1.plist">FirstDoc Mobile 1.0 Application for Sprint1 by 4 Nov 2016</a>
 	</br>
    <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileSprint2Branch.plist">FirstDoc Mobile 1.0 RC1 (Sprint2) by 25 Nov 2016</a>
+        </br>
+  <a href="itms-services://?action=download-manifest&url=https://cscfirstdoc.mybluemix.net/build/FirstDocMobileSprint3Branch.plist">FirstDoc Mobile 1.0 RC2 (Sprint2) by 09 Dec 2016</a>
     <script type="text/javascript" src="scripts/detect.js"></script>
 </body>
 </html>
